[gd_scene load_steps=4 format=3 uid="uid://brpedqmd2201a"]

[ext_resource type="Texture2D" uid="uid://4velul5v51li" path="res://Assets/StatusIcons/icon_small.png" id="1_io0cj"]
[ext_resource type="Script" path="res://Scenes/Guild/UnlockGuiBox.gd" id="1_letxd"]
[ext_resource type="Texture2D" uid="uid://4081ifol8kv5" path="res://Assets/Classes/Dancer/Dancer-profile.png" id="2_qsuej"]

[node name="UnlockGUIBox" type="MarginContainer"]
custom_minimum_size = Vector2(515, 0)
offset_right = 515.0
offset_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_letxd")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 2

[node name="PVTexture" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
self_modulate = Color(0.485703, 0.485704, 0.485703, 1)
clip_contents = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -232.5
offset_right = 85.0
offset_bottom = 201.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_qsuej")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="classname" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CLASSNAME"

[node name="unlockstatus" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "UNLOCKSTATUS"

[node name="ResourceContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 23

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ResourceContainer"]
layout_mode = 2

[node name="Res1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="res1icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res1"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_io0cj")

[node name="res1name" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res1"]
unique_name_in_owner = true
layout_mode = 2
text = "Resource_name"

[node name="res1current" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res1"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res1"]
layout_mode = 2
text = "/"

[node name="res1need" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res1"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Res3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="res3icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res3"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_io0cj")

[node name="res3name" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res3"]
unique_name_in_owner = true
layout_mode = 2
text = "Resource_name"

[node name="res3current" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res3"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res3"]
layout_mode = 2
text = "/"

[node name="res3need" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer/Res3"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ResourceContainer"]
layout_mode = 2

[node name="Res2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="res2icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_io0cj")

[node name="res2name" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res2"]
unique_name_in_owner = true
layout_mode = 2
text = "Resource_name"

[node name="res2current" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res2"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res2"]
layout_mode = 2
text = "/"

[node name="res2need" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res2"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Res4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="res4icon" type="TextureRect" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res4"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_io0cj")

[node name="res4name" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res4"]
unique_name_in_owner = true
layout_mode = 2
text = "Resource_name"

[node name="res4current" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res4"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res4"]
layout_mode = 2
text = "/"

[node name="res4need" type="Label" parent="MarginContainer/VBoxContainer/ResourceContainer/VBoxContainer2/Res4"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="UnlockButton" type="Button" parent="."]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2

[connection signal="pressed" from="UnlockButton" to="." method="_on_unlock_button_pressed"]
